--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "mint-ai-chatbot",
+  "name": "gwen-sales-agent",
   "version": "1.0.0",
+  "description": "Gwen Sales Agent - AI chatbot for product recommendations and Shopify integration",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^1.10.0",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "nodemailer": "^7.0.5",
-    "openai": "^4.2.1",
-    "pg": "^8.11.0"
+    "express": "^4.18.2",
+    "dotenv": "^16.0.3",
+    "axios": "^1.4.0",
+    "openai": "^4.0.0",
+    "pg": "^8.11.0",
+    "nodemailer": "^6.9.3"
   },
   "engines": {
-    "node": ">=14"
+    "node": "18.x"
   },
-  "description": "MINT Outdoor AI Sales Assistant with Shopify Integration"
+  "keywords": ["sales", "chatbot", "ai", "shopify", "recommendations"],
+  "author": "MINT Outdoor",
+  "license": "ISC"
 }
