--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.4.0",
     "openai": "^4.0.0",
     "pg": "^8.11.0",
-    "nodemailer": "^6.9.3"
+    "nodemailer": "^6.9.3",
+    "cors": "^2.8.5"
+
   },
   "engines": {
     "node": "18.x"
